--- a/speed_frontend/src/app/globals.css
+++ b/speed_frontend/src/app/globals.css
@@ -15,7 +15,7 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+/* 
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,7 +24,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} 
+*/
 
 @layer utilities {
   .text-balance {
