--- a/speed_frontend/src/app/globals.css
+++ b/speed_frontend/src/app/globals.css
@@ -21,3 +21,17 @@
     text-wrap: balance;
   }
 }
+
+.vert-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh; /* Full viewport height */
+  text-align: center;
+  flex-direction: column;
+}
+
+.text-header {
+  font-size: xx-large;
+  font-weight: 600;
+}
