--- a/speed_frontend/src/components/show-articles/ShowArticles.css
+++ b/speed_frontend/src/components/show-articles/ShowArticles.css
@@ -23,7 +23,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    margin-bottom: 20px; /* Add margin-bottom to create space between filters and table */
+    margin-bottom: 40px; 
   }
   
   .filter-tag {
@@ -48,7 +48,7 @@
     border-radius: 5px;
     padding: 15px;
     background-color: #fff;
-    margin-top: 20px; /* Move table down */
+    margin-top: 40px; 
   }
   
   .table {
